# embedding-drift-lib

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml
.github/workflows/: publish.yml
embedding_drift_lib/: __init__.py  analyser.py  config.py  monitor.py  sampler.py
embedding_drift_lib/math/: __init__.py  coverage.py  mmd.py  projector.py  wasserstein.py
embedding_drift_lib/storage/: __init__.py  snapshots.py
