[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-drift-lib"
version = "0.1.0"
description = "Detect when your RAG vector index silently drifts from reality — pure Python, no external services"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Sarthak Pande", email = "sarthakpande1008@gmail.com" }
]
keywords = ["rag", "embeddings", "drift", "llm", "monitoring", "mlops", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev    = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage   = "https://github.com/sarthakpande108/embedding-drift-monitor"
Repository = "https://github.com/sarthakpande108/embedding-drift-monitor"
Issues     = "https://github.com/sarthakpande108/embedding-drift-monitor/issues"

[tool.setuptools.packages.find]
include = ["embedding_drift_lib*"]

[tool.setuptools.package-data]
embedding_drift_lib = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"